cambios para parroquia

--- a/app/views/provincia-detail.html
+++ b/app/views/provincia-detail.html
@@ -1,5 +1,5 @@
 <div>
-    <h2 translate="canton.home.title" translate-values="{name : '{{ctrl.provincia.name}}'}">Cantones</h2>
+    <h2 translate="canton.home.titleWithProvincia" translate-values="{name : '{{ctrl.provincia.name}}'}">Cantones</h2>
     <jh-alert></jh-alert>
     <div class="container">
         <div class="row">
