--- a/app/views/parroquia-dialog.html
+++ b/app/views/parroquia-dialog.html
@@ -4,7 +4,7 @@
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
                 ng-click="clear()">&times;</button>
-        <h4 class="modal-title" id="myCantonLabel" translate="canton.home.createOrEditLabel">Create or edit a Canton</h4>
+        <h4 class="modal-title" id="myParroquiaLabel" translate="parroquia.home.createOrEditLabel">Create or edit a Parroquia</h4>
     </div>
     <div class="modal-body">
         <jh-alert-error></jh-alert-error>
@@ -17,7 +17,7 @@
         <div class="form-group">
             <label translate="entity.field.code" for="field_code">Name</label>
             <input type="text" class="form-control" name="code" id="field_code"
-                    ng-model="canton.code"
+                    ng-model="parroquia.code"
                     required>
             <div ng-show="editForm.code.$invalid">
                 <p class="help-block"
@@ -30,7 +30,7 @@
         <div class="form-group">
             <label translate="entity.field.name" for="field_name">Name</label>
             <input type="text" class="form-control" name="name" id="field_name"
-                    ng-model="canton.name"
+                    ng-model="parroquia.name"
                     required>
 
             <div ng-show="editForm.name.$invalid">
