--- a/app/views/common/sidebar-panel.html
+++ b/app/views/common/sidebar-panel.html
@@ -116,25 +116,20 @@
                     </a>
                 </li>
                 <li ui-sref-active="active">
-                    <a ui-sref="app.charts.chartjs">
+                    <a ui-sref="app.parroquia">
                         <span>Parroquias</span>
                     </a>
                 </li>
                 <li ui-sref-active="active">
-                    <a ui-sref="app.charts.rickshaw">
+                    <a ui-sref="app.zona">
                         <span>Zonas</span>
                     </a>
                 </li>
                 <li ui-sref-active="active">
-                    <a ui-sref="app.charts.nvd3">
+                    <a ui-sref="app.recinto">
                         <span>Recintos</span>
                     </a>
-                </li>
-                <li ui-sref-active="active">
-                    <a ui-sref="app.charts.c3">
-                        <span>Juntas</span>
-                    </a>
-                </li>
+                </li>                
             </ul>
         </li>
 
