--- a/app/views/zona-dialog.html
+++ b/app/views/zona-dialog.html
@@ -4,20 +4,20 @@
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
                 ng-click="clear()">&times;</button>
-        <h4 class="modal-title" id="myParroquiaLabel" translate="parroquia.home.createOrEditLabel">Create or edit a Parroquia</h4>
+        <h4 class="modal-title" id="myzona.Label" translate="zona.home.createOrEditLabel">Create or edit a Zona</h4>
     </div>
     <div class="modal-body">
         <jh-alert-error></jh-alert-error>
         <div class="form-group">
             <label for="id" translate="global.field.id">ID</label>
             <input type="text" class="form-control" id="id" name="id"
-                    ng-model="parroquia._id" readonly>
+                    ng-model="zona._id" readonly>
         </div>
 
         <div class="form-group">
             <label translate="entity.field.code" for="field_code">Name</label>
             <input type="text" class="form-control" name="code" id="field_code"
-                    ng-model="parroquia.code"
+                    ng-model="zona.code"
                     required>
             <div ng-show="editForm.code.$invalid">
                 <p class="help-block"
@@ -30,7 +30,7 @@
         <div class="form-group">
             <label translate="entity.field.name" for="field_name">Name</label>
             <input type="text" class="form-control" name="name" id="field_name"
-                    ng-model="parroquia.name"
+                    ng-model="zona.name"
                     required>
 
             <div ng-show="editForm.name.$invalid">
