--- a/app/views/common/sidebar-panel.html
+++ b/app/views/common/sidebar-panel.html
@@ -65,7 +65,7 @@
             </a>
             <ul class="sub-menu">
                 <li ui-sref-active="active">
-                    <a ui-sref="app.charts.flot">
+                    <a ui-sref="app.charts-flot">
                         <span>Flot Charts</span>
                     </a>
                 </li>
