Cambios en menu

--- a/app/views/common/sidebar-panel.html
+++ b/app/views/common/sidebar-panel.html
@@ -143,7 +143,7 @@
                     </a>
                 </li>
                 <li ui-sref-active="active">
-                    <a ui-sref="app.canton">
+                    <a ui-sref="app.menu">
                         <span translate="global.menu.menu">Menus</span>
                     </a>
                 </li>  
